jenkins/jenkins.rbac.yaml
# https://github.com/marcel-dempers/docker-development-youtube-series/tree/master/jenkins
#
---

apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
