jenkins/jenkins-all-in-one.yaml
# https://github.com/marcel-dempers/docker-development-youtube-series/tree/master/jenkins
# RUN THIS FIRST
---

apiVersion: v1
kind: Namespace
metadata:
  name: jenkins

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
  namespace: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "1024Mi"
            cpu: "256m"
          requests:
            cpu: 200m
            memory: 512Mi
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 50000
          protocol: TCP
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins
      restartPolicy: Always
      securityContext:
        runAsUser: 0
      terminationGracePeriodSeconds: 30
      volumes:
      - name: jenkins
        # emptyDir: {}  # Data is not persisted across pod failures
        persistentVolumeClaim:    # Data is persisted across pod failures
          claimName: jenkins-claim

---

apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app: jenkins
spec:
  type: NodePort  
  ports:
    - name: ui
      port: 8080
      targetPort: 8080
      protocol: TCP
      nodePort: 32307
    - name: slave
      port: 50000
      protocol: TCP
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: jenkins
